Sun Jan  9 14:47:50 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c: apply a patch from Nobuyoshi Nakada.
	  fixed #3616 [ruby-core:31484] IRB + readline incorrectly counts
	  non-printing characters in prompt

Sat Jan  8 21:47:26 2011  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_sort_by): use rb_ary_resize.
	  (ary_cutoff): removed.

Sat Jan  8 21:24:17 2011  Tanaka Akira  <akr@fsij.org>

	* pack.c (swapf): compilation condition simplified.
	  (swapd): ditto.

Sat Jan  8 20:51:25 2011  Tanaka Akira  <akr@fsij.org>

	* pack.c (swapd): remove duplicated code.

Sat Jan  8 19:28:55 2011  Tanaka Akira  <akr@fsij.org>

	* thread.c: parenthesize macro arguments.

Fri Jan  7 23:07:40 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): backref needs to capture.

Fri Jan  7 21:57:22 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-mode-variables), misc/ruby-style.el:
	  show trailing whitespace.

	* misc/ruby-mode.el (ruby-font-lock-syntactic-keywords): highlight
	  regexp after open bracket.  [ruby-core:34183]

Fri Jan  7 00:37:35 2011  Tanaka Akira  <akr@fsij.org>

	* string.c: parenthesize macro arguments.

Thu Jan  6 22:42:02 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigmul1_karatsuba): avoid overflow that make assertion
	  fail in certain case.  this patch is contributed from Ray Chason
	  <chasonr at gmail.com> in personal communication.

Thu Jan  6 20:55:49 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): ignore rest from first dot from
	  TARGET to generate init function name.
	  this is followup of r30464.

Thu Jan  6 11:27:01 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/json/tree_builder.rb (start_mapping): tags
	  should not be included in JSON mapping

Thu Jan  6 09:23:33 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/net/protocol.rb (eof?): BufferedIO should proxy eof? to the
	  underlying IO object.
